Fix CodeQL note-severity alerts: deprecated JDK calls and inefficient expressions (#823)