@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 
@@ -348,7 +349,7 @@ public class AccountStatusNotificationHandlerConfigManager
           propertyDefinition.loadClass(className,
               AccountStatusNotificationHandler.class);
       final AccountStatusNotificationHandler<T> notificationHandler =
-          handlerClass.newInstance();
+          handlerClass.getDeclaredConstructor().newInstance();
 
       if (initialize)
       {
